avoid horizontal scrolling

--- a/web/src/assets/css/base.scss
+++ b/web/src/assets/css/base.scss
@@ -19,6 +19,7 @@ body {
   font-weight: 500;
   line-height: 1.4;
   position: relative;
+  overflow-x: hidden;
 
   transition: color .6s ease-in-out, background-color .6s ease-in-out;
 
